connect template url

--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -301,7 +301,7 @@
             </div>
           </div>
           <div style="flex:2">
-            <a style="float:right" href="#" class="btn btn-sm btn-danger">Live Example</a>
+            <a target="_blank" style="float:right" href="https://<% url %>" class="btn btn-sm btn-danger">Live Example</a>
             <h3><% name %></h3>
             <p>If you find yourself wrestling with CSS layout, it’s likely you’re making decisions for browsers they should be making themselves. Through a series of simple, composable layouts, Every Layout will teach you how to better harness the built-in algorithms that power browsers and CSS.</p>
             <h4 class="mb-0">Includes</h4>
@@ -341,6 +341,7 @@
               var tplId = $(this).attr('id')
               tplId = tplId.split('-')[0]
               var template = templatesMap[tplId]
+              template['url'] + (template.url.length==0) ? template.slug+'.vertex360.co' : template.url
               console.log('Select Template: ' + JSON.stringify(template))
 
               var tpl = $('#tpl-modal').html()
