--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -342,6 +342,7 @@
               tplId = tplId.split('-')[0]
               var template = templatesMap[tplId]
               template['url'] = (template.url.length==0) ? template.slug+'.vertex360.co' : template.url
+              template['description'] = (template.description.length==0) ? 'No Description' : template.description
               console.log('Select Template: ' + JSON.stringify(template))
 
               var tpl = $('#tpl-modal').html()
