render template description

--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -303,7 +303,7 @@
           <div style="flex:2">
             <a target="_blank" style="float:right" href="https://<% url %>" class="btn btn-sm btn-danger">Live Example</a>
             <h3><% name %></h3>
-            <p>If you find yourself wrestling with CSS layout, it’s likely you’re making decisions for browsers they should be making themselves. Through a series of simple, composable layouts, Every Layout will teach you how to better harness the built-in algorithms that power browsers and CSS.</p>
+            <p><%{description}%></p>
             <h4 class="mb-0">Includes</h4>
             <ol style="padding-left:16px">
               <li>YouTube Transcriptions</li>
