btn container display

--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -260,7 +260,7 @@
             <div id="template-modal-content" class="modal-body" style="display:flex"></div>
             <div class="text-center" style="padding:1.5rem;border-top:1px solid #ededed">
               <input id="input-site-name" type="text" class="form-control w-25 mr-3" placeholder="Your Site Name" style="display:initial;height:48px;padding-top:2px;background:#fffffa" />
-              <div id="btn-launch-container"><button id="btn-launch-template" type="button" class="btn btn-primary btn-lg mr-2">LAUNCH SITE</button></div>
+              <div style="display:inline-block" id="btn-launch-container"><button id="btn-launch-template" type="button" class="btn btn-primary btn-lg mr-2">LAUNCH SITE</button></div>
             </div>
           </div>
         </div>
