launch template test

--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -380,7 +380,9 @@
 
             console.log('launchTemplate: ' + JSON.stringify(body))
 
-            $('#btn-launch-container').html("<img style='width:100px' src='https://storage.turbo360.co/vertex360-cms-4hujkc/loader.gif' /><br /><em style='color:#888'>Launching your site. This may take up to 2 minutes...</em>")
+            $('#btn-launch-container').html("<img style='width:100px' src='https://storage.turbo360.co/vertex360-cms-4hujkc/loader.gif' /><em style='color:#888'>Launching your site. This may take up to 2 minutes...</em>")
+            return
+            
             window.vertexLib.postRequest('/account/launch-template', body, function(err, response){
               if (err){
                 alert('Error: ' + err.message)
