--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -222,7 +222,7 @@
                       <div class="row">
 
                           {{#templates}}
-                          <article class="col-md-6 {{template.features}} all">
+                          <article class="col-md-6 {{features}} all">
                               <a id="{{id}}-card" class="tpl-link" href="#" data-toggle="modal" data-target="#template-modal">
                                 <div class="card mb-4" style="background-image: url('{{{image}}}=s1024')"></div>
                               </a>
