--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -207,7 +207,7 @@
                       <a href="#" class="sidebar-link" data-rel="all">All templates</a>
                   </li>
                   <li>
-                      <a href="#" class="sidebar-link" data-rel="Youtube">Youtube</a>
+                      <a href="#" class="sidebar-link" data-rel="youtube">Youtube</a>
                   </li>
                   <li>
                       <a href="#" class="sidebar-link" data-rel="blog">Blog</a>
