--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -28,7 +28,7 @@
             height: 100vh;
             color: #fff;
             transition: all 0.3s;
-            padding-top: 10rem;
+            padding-top: 6.5rem;
         }
         #sidebar ul li a,
         #sidebar .sidebar-header {
@@ -200,7 +200,7 @@
           <!-- Sidebar -->
           <nav id="sidebar">
               <div class="sidebar-header">
-                  <h5>Categories</h5>
+                  <h5 style="color:#333">Features</h5>
               </div>
               <ul class="list-unstyled components">
                   <li class="active">
@@ -211,6 +211,9 @@
                   </li>
                   <li>
                       <a href="#" class="sidebar-link" data-rel="blog">Blog</a>
+                  </li>
+                  <li>
+                      <a href="#" class="sidebar-link" data-rel="podcast">Podcast</a>
                   </li>
               </ul>
           </nav>
