--- a/medium/about.mustache
+++ b/medium/about.mustache
@@ -284,7 +284,11 @@
                 <div class="row">
                     <div class="col-md-7 mx-auto text-center">
                       <h1>Get Started Free</h1>
-                      <p class="text-muted lead">Go ahead and compare our prices to the other website builders.<br />We'll be right here when you get back.</p>
+                      <p class="text-muted lead">
+                        Vertex 360 is free to start.
+                        <br />
+                        Some of our features are premium but anyone can start for free forever.
+                      </p>
                     </div>
                 </div>
 
