--- a/medium/about.mustache
+++ b/medium/about.mustache
@@ -287,7 +287,7 @@
                       <p class="text-muted lead">
                         Vertex 360 is free to start.
                         <br />
-                        Some of our features are premium but anyone can start for free forever.
+                        Some features are premium but anyone can start for free.
                       </p>
                     </div>
                 </div>
