--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -242,6 +242,8 @@
           </div>
       </div>
 
+      {{>auth}}
+
       <div class="modal fade" id="template-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg" style="max-width:960px" role="document">
           <div class="modal-content" style="border-radius:4px">
@@ -255,28 +257,6 @@
             <div class="text-left" style="padding:1.5rem;border-top:1px solid #ededed">
               <input id="input-site-name" type="text" class="form-control mr-3" placeholder="Your Site Name" style="display:initial;width:290px;height:48px;padding-top:2px;background:#fffffa" />
               <div style="display:inline-block" id="btn-launch-container"><button id="btn-launch-template" type="button" class="btn btn-primary btn-lg mr-2">LAUNCH SITE</button></div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-sm" role="document">
-          <div class="modal-content" style="border-radius:4px">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Login</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <input id="input-login-email" style="background:#fffffa" class="form-control mb-4" type="text" placeholder="Email" />
-              <input id="input-login-password" style="background:#fffffa" class="form-control mb-4" type="password" placeholder="Password" />
-              <button id="input-login" style="width:100%" type="button" class="btn btn-primary btn-lg">Login</button>
-              <hr />
-            </div>
-            <div class="text-center" style="padding:1.5rem">
-              <img style="width:160px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
             </div>
           </div>
         </div>
