nav link to blog

--- a/medium/partials/nav.mustache
+++ b/medium/partials/nav.mustache
@@ -11,6 +11,9 @@
 			<li class="nav-item">
 				<a class="nav-link" href="/feed">Feed</a>
 			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="https://blog.vertex360.co">Blog</a>
+			</li>
 			<li class="nav-item" id="nav-login">
 				<a class="nav-link" href="#" style="color:#03a87c" href="#" data-toggle="modal" data-target="#login-modal">Sign In</a>
 			</li>
