--- a/medium/account.mustache
+++ b/medium/account.mustache
@@ -174,13 +174,13 @@
               </div>
               <div class="list-box-listing-content">
                 <div class="inner">
+                  <a target="_blank" href="https://{{slug}}.vertex360.co" class="button"><i class="sl sl-icon-share-alt"></i></a>
                   <h3><a target="_blank" href="https://www.vertex360.co/template/{{slug}}">{{name}}</a></h3>
                   <span>{{template.category}}</span>
                 </div>
               </div>
             </div>
             <div class="buttons-to-right" style="bottom:0%;top:unset;opacity:1.0">
-              <a target="_blank" href="https://{{slug}}.vertex360.co" class="button"><i class="sl sl-icon-share-alt"></i> View Site</a>
               <a href="/admin/pages/{{slug}}" class="button"><i class="sl sl-icon-equalizer"></i> Configuration</a>
               <a href="/admin/{{slug}}" class="button"><i class="sl sl-icon-settings"></i> Settings</a>
               <a href="/admin/{{slug}}?selected=cms" class="button"><i class="sl sl-icon-layers"></i> CMS</a>
