--- a/medium/account.mustache
+++ b/medium/account.mustache
@@ -174,8 +174,8 @@
               </div>
               <div class="list-box-listing-content">
                 <div class="inner">
-                  <a target="_blank" href="https://www.vertex360.co/template/{{slug}}">{{name}}</a>
-                  <a target="_blank" href="https://{{slug}}.vertex360.co" class="button"><i class="sl sl-icon-share-alt"></i></a>
+                  <a target="_blank" style="margin-right:12px" href="https://www.vertex360.co/template/{{slug}}">{{name}}</a>
+                  <a target="_blank" href="https://{{slug}}.vertex360.co"><i class="sl sl-icon-share-alt"></i></a>
                   <br />
                   <span>{{template.category}}</span>
                 </div>
