--- a/medium/account.mustache
+++ b/medium/account.mustache
@@ -173,7 +173,7 @@
                 </a>
               </div>
               <div class="list-box-listing-content">
-                <div class="inner">
+                <div class="inner" style="position:inherit;line-height:20px">
                   <a target="_blank" style="margin-right:8px;font-size:20px" href="https://www.vertex360.co/template/{{slug}}">{{name}}</a>
                   <a target="_blank" href="https://{{slug}}.vertex360.co"><i class="sl sl-icon-share-alt"></i></a>
                   <br />
