--- a/medium/partials/footer.mustache
+++ b/medium/partials/footer.mustache
@@ -1,13 +1,10 @@
-<div class="container mt-5">
-	<footer class="bg-white border-top p-3 text-muted small">
-	<div class="row align-items-center justify-content-between">
-		<div>
-			<a href="/">
-				<img class="mr-3 mb-3" style="max-width:120px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
-			</a>
-			Copyright &copy; <script>document.write(new Date().getFullYear())</script>. All rights reserved.
-		</div>
+<footer class="container bg-white border-top p-3 text-muted small d-flex">
+	<div style="flex:1">
+		<a href="/">
+			<img class="mr-3 mb-3" style="max-width:120px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
+		</a>
 	</div>
-	</footer>
-</div>
-<!-- End Footer -->
+	<div style="padding-top:9px">
+		Copyright &copy; <script>document.write(new Date().getFullYear())</script>. All rights reserved.
+	</div>
+</footer>
