showcase chloe template

--- a/medium/about.mustache
+++ b/medium/about.mustache
@@ -93,10 +93,10 @@
                         </a>
                     </div>
                     <div class="col-md-6 play-wrapper text-center">
-                        <a target="_blank" href="https://www.katyaawar.me/">
-                          <small class="text-white">www.katyaawar.me</small>
+                        <a target="_blank" href="/templates">
+                          <small class="text-white">Chloe Template</small>
+                          <img src="https://lh3.googleusercontent.com/XtArYh3DbNYgV25qBYPdPspKI9DQjAfCYMPl65JEKuFq8br_PRxDW8SqECKuOUZ-tz5hNyVij7L90xwACcomP6bWHg=s1024" class="img-fluid d-block mx-auto" alt="Vertex 360" />
                         </a>
-                        <img src="https://lh3.googleusercontent.com/_5_-MFc973AMx5JWKnbMtwZc0z2zvyqJ9ULdB5KL4Lj1pfIlzGfkdoo1QKGhQ9pfeT2cteHWTWLpja-qiyrl0kAw_nA=s1024" class="img-fluid d-block mx-auto" alt="Vertex 360" />
                     </div>
                 </div>
             </div>
