--- a/medium/about.mustache
+++ b/medium/about.mustache
@@ -93,7 +93,7 @@
                         </a>
                     </div>
                     <div class="col-md-6 play-wrapper text-center">
-                        <a target="_blank" href="/templates">
+                        <a href="/templates">
                           <small class="text-white">Chloe Template</small>
                           <img src="https://lh3.googleusercontent.com/XtArYh3DbNYgV25qBYPdPspKI9DQjAfCYMPl65JEKuFq8br_PRxDW8SqECKuOUZ-tz5hNyVij7L90xwACcomP6bWHg=s1024" class="img-fluid d-block mx-auto" alt="Vertex 360" />
                         </a>
