link to youtube transcript example

--- a/medium/about.mustache
+++ b/medium/about.mustache
@@ -121,7 +121,7 @@
                                     <div class="media-body">
                                         <h5 class="mt-0">YouTube Video Transcription</h5>
                                         <span class="text-muted">
-                                          Your YouTube subscribers can now also <em>read</em> your videos through our video transcription feature. See <a target="_blank" href="#">HERE</a> for an example.
+                                          Your YouTube subscribers can now also <em>read</em> your videos through our video transcription feature. See <a target="_blank" href="https://www.katyaawar.me/video/how-i-got-into-college-pc12cq">HERE</a> for an example.
                                         </span>
                                     </div>
                                 </div>
