--- a/medium/partials/nav.mustache
+++ b/medium/partials/nav.mustache
@@ -9,6 +9,9 @@
 	<div class="navbar-collapse collapse" id="navbarColor02">
 		<ul class="navbar-nav ml-auto d-flex align-items-center">
 			<li class="nav-item">
+				<a class="nav-link" href="/templates">Templates</a>
+			</li>
+			<li class="nav-item">
 				<a class="nav-link" href="/feed">Feed</a>
 			</li>
 			<li class="nav-item">
