--- a/medium/about.mustache
+++ b/medium/about.mustache
@@ -79,7 +79,7 @@
         {{>nav}}
 
         <!--hero header-->
-        <section class="py-5 py-md-7" id="home" style="background:#04353a">
+        <section class="py-5 py-md-7" id="home" style="background:#688ac7">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 my-md-auto mb-5 mb-md-0 text-center text-md-left">
@@ -167,6 +167,38 @@
                                         <h5 class="mt-0">Blog</h5>
                                         <span class="text-muted">
                                           Of course, all Vertex 360 sites come installed with standard blog functionality with RSS feeds and a simple admin dashboard.
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-sm-6 mb-5">
+                                <div class="media">
+                                    <div class="icon-box mt-0 ml-0 mr-3">
+                                        <div class="icon-box-inner small-xs text-primary">
+                                            <span data-feather="dollar-sign" width="30" height="30"></span>
+                                        </div>
+                                    </div>
+                                    <div class="media-body">
+                                        <h5 class="mt-0">Store (coming soon!)</h5>
+                                        <span class="text-muted">
+                                          Get Merch? Sell your merch, e-books, courses, and more on Vertex 360. We don't take commission (other than standard credit card fees).
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-sm-6 mb-5">
+                                <div class="media">
+                                    <div class="icon-box mt-0 ml-0 mr-3">
+                                        <div class="icon-box-inner small-xs text-primary">
+                                            <span data-feather="bar-chart-2" width="30" height="30"></span>
+                                        </div>
+                                    </div>
+                                    <div class="media-body">
+                                        <h5 class="mt-0">Built-in Analytics (coming soon!)</h5>
+                                        <span class="text-muted">
+                                          Page views, visitors, referrers - Vertex 360 sites come installed with all the analytics you need to make the right decisions.
                                         </span>
                                     </div>
                                 </div>
