--- a/medium/partials/nav.mustache
+++ b/medium/partials/nav.mustache
@@ -1,7 +1,7 @@
-<nav class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
+<nav class="topnav navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 <div class="container">
 	<a class="navbar-brand" href="/">
-		<img style="max-width:160px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
+		<img style="max-width:160px" src="https://lh3.googleusercontent.com/pdS5a8pCwrYEp2dbvBPvBxq1WPO57VexjG0fkCNOSw6lIeUNuLK1PAyizKIWEvX6UgFBVQ9OHzbtkQMhvbS57ZRXww=s320" />
 	</a>
 	<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -18,7 +18,7 @@
 				<a class="nav-link" href="https://blog.vertex360.co">Blog</a>
 			</li>
 			<li class="nav-item" id="nav-login">
-				<a class="nav-link" href="#" style="color:#03a87c" href="#" data-toggle="modal" data-target="#login-modal">Sign In</a>
+				<a class="nav-link" href="#" href="#" data-toggle="modal" data-target="#login-modal">Sign In</a>
 			</li>
 			<li class="nav-item highlight ml-4" id="login-container">
 				<a id="nav-register" style="background:#03a87c;color:#fff !important" class="nav-link" href="#" data-toggle="modal" data-target="#register-modal">JOIN VERTEX</a>
