--- a/medium/partials/nav.mustache
+++ b/medium/partials/nav.mustache
@@ -1,4 +1,4 @@
-<nav class="topnav navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav style="background-color:#333 !important" class="topnav navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 <div class="container">
 	<a class="navbar-brand" href="/">
 		<img style="max-width:160px" src="https://lh3.googleusercontent.com/pdS5a8pCwrYEp2dbvBPvBxq1WPO57VexjG0fkCNOSw6lIeUNuLK1PAyizKIWEvX6UgFBVQ9OHzbtkQMhvbS57ZRXww=s320" />
