--- a/medium/about.mustache
+++ b/medium/about.mustache
@@ -34,7 +34,7 @@
         left: 41px;
         width: 6px;
         height: 100%;
-        background-color: #f8f9fa;
+        background-color: #eaeaea;
         z-index: -1;
       }
       .timeline .media:last-child:after {
