thread preview styling

--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -52,7 +52,7 @@
                           {{#threads}}
                           <div class="col-md-10">
                             <div class="bg-white mb-4" style="padding:16px;border:1px solid #ededed;border-radius:6px;display:flex">
-                              <img src="{{subject.image}}=s220-c" />
+                              <img class="mr-3" style="max-width:150px;max-height:150px" src="{{subject.image}}=s300-c" />
                               <div>
                                 <h3>{{subject.title}}</h2>
                                 <p>{{subject.preview}}</p>
