--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -45,7 +45,7 @@
 
           <div id="content">
               <!-- features section -->
-              <section class="py-6" id="features" style="background:#f9f9f9">
+              <section class="py-5" id="features" style="background:#f9f9f9">
                   <div class="container mt-4">
                       <div class="row">
 
@@ -53,9 +53,11 @@
                           <div class="col-md-10">
                             <div class="bg-white mb-4" style="padding:16px;border:1px solid #ededed;border-radius:6px;display:flex">
                               <img class="mr-3" style="max-width:150px;max-height:150px" src="{{subject.image}}=s300-c" />
-                              <div>
+                              <div style="flex:1">
                                 <h3>{{subject.title}}</h2>
                                 <p>{{subject.preview}}</p>
+                              </div>
+                              <div style="width:24px;background:#f9f9f9">
                               </div>
 
                             </div>
