--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -51,9 +51,11 @@
 
                           {{#threads}}
                           <div class="col-md-10">
-                            <div class="bg-white mb-4" style="padding:16px;border:1px solid #ededed;border-radius:6px;display:flex">
-                              <img class="mr-3" style="max-width:150px;max-height:150px" src="{{subject.image}}=s300-c" />
-                              <div style="flex:1">
+                            <div class="bg-white mb-4" style="border:1px solid #ededed;border-radius:6px;display:flex">
+                              <div style="padding:16px 0px 16px 16px">
+                                <img class="mr-3" style="max-width:150px;max-height:150px" src="{{subject.image}}=s300-c" />
+                              </div>
+                              <div style="flex:1;padding:16px">
                                 <h3>{{subject.title}}</h2>
                                 <p>{{subject.preview}}</p>
                               </div>
