--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -59,7 +59,7 @@
                                 <h3>{{subject.title}}</h2>
                                 <p>{{subject.preview}}</p>
                               </div>
-                              <div style="width:24px;background:#f9f9f9">
+                              <div style="width:24px;background:#e8f2ff">
                               </div>
 
                             </div>
