--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -53,7 +53,7 @@
                           <div class="col-md-10">
                             <div class="bg-white mb-4" style="border:1px solid #ededed;border-radius:6px;display:flex">
                               <div style="padding:16px 0px 16px 16px">
-                                <img class="mr-3" style="max-width:150px;max-height:150px" src="{{subject.image}}=s300-c" />
+                                <img style="max-width:150px;max-height:150px" src="{{subject.image}}=s300-c" />
                               </div>
                               <div style="flex:1;padding:16px">
                                 <h3>{{subject.title}}</h2>
