singe line titles

--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -56,7 +56,7 @@
                                 <img style="max-width:150px;max-height:150px" src="{{subject.image}}=s300-c" />
                               </div>
                               <div style="flex:1;padding:16px">
-                                <h3>{{subject.title}}</h2>
+                                <h4 style="text-overflow:ellipsis;white-space:nowrap;overflow:hidden;">{{subject.title}}</h4>
                                 <p>{{subject.preview}}</p>
                               </div>
                               <div style="width:24px;background:#e8f2ff">
