truncated thread title

--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -49,19 +49,18 @@
                   <div class="container mt-4">
                       <div class="row">
 
-                        <div class="col-md-10">
+                        <div class="col-md-9">
                           {{#threads}}
                             <div class="bg-white mb-4" style="border:1px solid #ededed;border-radius:6px;display:flex">
                               <div style="padding:16px 0px 16px 16px">
                                 <img style="max-width:150px;max-height:150px" src="{{subject.image}}=s300-c" />
                               </div>
                               <div style="flex:1;padding:16px">
-                                <h4 style="text-overflow:ellipsis;white-space:nowrap;overflow:hidden;">{{subject.title}}</h4>
+                                <h4>{{subject.title}}</h4>
                                 <p>{{subject.preview}}</p>
                               </div>
                               <div style="width:24px;background:#e8f2ff">
                               </div>
-
                             </div>
                           {{/threads}}
                         </div>
