show date and site name

--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -58,6 +58,11 @@
                               <div style="flex:1;padding:16px">
                                 <h4>{{subject.title}}</h4>
                                 <p>{{subject.preview}}</p>
+                                <div style="text-align:right">
+                                  <small>{{subject.dateString}}<small>
+                                  <span style="margin:6px">&middot;<span>
+                                  <small>{{site.name}}<small>
+                                </div>
                               </div>
                               <div style="width:24px;background:#e8f2ff">
                               </div>
