--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -60,7 +60,7 @@
                                 <p>{{subject.preview}}</p>
                                 <div style="text-align:right">
                                   <small>{{subject.dateString}}<small>
-                                  <span style="margin:6px">&middot;<span>
+                                  <span style="margin:6px">&middot;</span>
                                   <small>{{site.name}}<small>
                                 </div>
                               </div>
