--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -59,9 +59,9 @@
                                 <h4>{{subject.title}}</h4>
                                 <p>{{subject.preview}}</p>
                                 <div style="text-align:right">
-                                  <small>{{subject.dateString}}<small>
+                                  <small>{{subject.dateString}}</small>
                                   <span style="margin:6px">&middot;</span>
-                                  <small>{{site.name}}<small>
+                                  <small>{{site.name}}</small>
                                 </div>
                               </div>
                               <div style="width:24px;background:#e8f2ff">
