--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -59,9 +59,11 @@
                                 <h4>{{subject.title}}</h4>
                                 <p>{{subject.preview}}</p>
                                 <div style="text-align:right">
-                                  <small>{{subject.dateString}}</small>
+                                  <small style="color:#b1b0b0">{{subject.dateString}}</small>
                                   <span style="margin:6px">&middot;</span>
-                                  <small>{{site.name}}</small>
+                                  <small style="color:#b1b0b0">{{site.name}}</small>
+                                  <span style="margin:6px">&middot;</span>
+                                  <img style="width:24px;border-radius:50%" src="{{{site.image}}}=s48-c" />
                                 </div>
                               </div>
                               <div style="width:24px;background:#e8f2ff">
