--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -56,15 +56,14 @@
                                 <img style="max-width:150px;max-height:150px" src="{{subject.image}}=s300-c" />
                               </div>
                               <div style="flex:1;padding:16px">
-                                <h4>{{subject.title}}</h4>
-                                <p>{{subject.preview}}</p>
                                 <div style="text-align:right">
                                   <small style="color:#b1b0b0">{{subject.dateString}}</small>
                                   <span style="margin:6px">&middot;</span>
                                   <small style="color:#b1b0b0">{{site.name}}</small>
-                                  <span style="margin:6px">&middot;</span>
-                                  <img style="width:24px;border-radius:50%" src="{{{site.image}}}=s48-c" />
+                                  <img style="margin-left:6px;width:24px;border-radius:50%" src="{{{site.image}}}=s48-c" />
                                 </div>
+                                <h4>{{subject.title}}</h4>
+                                <p>{{subject.preview}}</p>
                               </div>
                               <div style="width:24px;background:#e8f2ff">
                               </div>
