smaller header text

--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -57,10 +57,10 @@
                               </div>
                               <div style="flex:1;padding:16px">
                                 <div style="text-align:right">
-                                  <small style="color:#b1b0b0">{{subject.dateString}}</small>
+                                  <small style="color:#b1b0b0;font-size:12px">{{subject.dateString}}</small>
                                   <span style="margin:6px">&middot;</span>
-                                  <small style="color:#b1b0b0">{{site.name}}</small>
-                                  <img style="margin-left:6px;width:24px;border-radius:50%" src="{{{site.image}}}=s48-c" />
+                                  <small style="color:#b1b0b0;font-size:12px">{{site.name}}</small>
+                                  <img style="margin-left:6px;width:22px;border-radius:50%" src="{{{site.image}}}=s44-c" />
                                 </div>
                                 <h4>{{subject.title}}</h4>
                                 <p>{{subject.preview}}</p>
