--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -56,7 +56,7 @@
                                 <img style="max-width:190px;max-height:190px" src="{{subject.image}}=s300-c" />
                               </div>
                               <div style="flex:1;padding:16px">
-                                <div style="text-align:right">
+                                <div class="mb-2" style="text-align:right">
                                   <small style="color:#b1b0b0;font-size:12px">{{subject.dateString}}</small>
                                   <span style="margin:6px">&middot;</span>
                                   <small style="color:#b1b0b0;font-size:12px">{{site.name}}</small>
