--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -64,10 +64,10 @@
                                   <small style="color:#b1b0b0;font-size:12px">{{site.name}}</small>
                                   <img style="margin-left:6px;width:22px;border-radius:50%" src="{{{site.image}}}=s44-c" />
                                 </div>
-                                <a target="_blank" href="{{subject.url}}">
+                                <a style="text-decoration:none;color:#333" target="_blank" href="{{subject.url}}">
                                   <h4>{{subject.title}}</h4>
                                 </a>
-                                <p><a target="_blank" href="{{subject.url}}">{{subject.preview}}</a></p>
+                                <p><a style="text-decoration:none;color:#333" target="_blank" href="{{subject.url}}">{{subject.preview}}</a></p>
                               </div>
                               <div style="width:24px;background:#e8f2ff">
                               </div>
